--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,58 @@
+body {
+  background-color: rgb(246, 245, 244);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.container {
+  max-width: 600px;
+  margin: 30px auto;
+  background-color: white;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 15px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 h1 {
   text-align: center;
+  font-size: 45px;
+}
+h2 {
+  margin: 0;
+  font-size: 30px;
 }
 footer {
   text-align: center;
+  font-size: 15px;
+  opacity: 0.7;
+}
+.city {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+  border-bottom: 1px dashed rgb(207, 207, 207);
+}
+.city:last-child {
+  border: none;
+}
+.date {
+  opacity: 0.7;
+}
+.time {
+  font-size: 40px;
+  font-weight: 550;
+}
+.time small {
+  font-size: 24px;
+  font-weight: 300;
+  vertical-align: 6px;
+  line-height: 40px;
 }
